test/vm/errors/type_mismatch.ach
// Expected error: type mismatch in arithmetic
let x = "hello" - 1
